--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -13,29 +13,48 @@
     {
         <h2>Welcome @((string)Session[SessionKeys.Username])!</h2>
     }*@
-<div class="topRecipes">
-    <img class="logo" src="~/images/logo.jpg" />
-    <h2> Welcome to the Capstone Meal Planner</h2>
-    @{ foreach (Recipes recipe in Model)
-        {
-            <div >
+<style>
 
-                {
-                <p> @recipe.RecipeName</p>
-                <p>@recipe.RecipeDescription</p>
-                <p>@recipe.CaloriesPerServing Calories Per Serving</p>
-
-
-                }
-                }
-            </div>
-
-        }
+    body {
+        background-image: url("https://i1.wp.com/static1.squarespace.com/static/56c3a2c11bbee05e5e959908/t/59e7f139d74cff9265e5754b/1508372817664/cuttingboard.jpg");
+        background-size:100%;
     }
 
+</style>
+
+<body>
+    <div class="topRecipes">
+        <h2 align ="center" style=" color: antiquewhite; "> Welcome to the Capstone Meal Planner</h2>
+
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-xs-12">
+                    @{ foreach (Recipes recipe in Model)
+                        {
+                            <div class ="inline-block"style="color: darkred; font-size: large; font-style: oblique;">
+
+
+                                <p> @recipe.RecipeName</p>
+                                <p>@recipe.RecipeDescription</p>
+                                <p>@recipe.CaloriesPerServing Calories Per Serving</p>
+                             
+                            </div>
+
+                        }
+                    }
+                            <p>
+                                <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 20%">My Meal Plan</a>
+                                <a href="/Recipes/Index" class="btn btn-primary" style="margin-left: 40%">Our Recipes</a>
+                                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 60%">Sign Up!</a>
+                            </p>
+    
+                </div>
+            </div>
+        </div>
+      
 
 
 
 
-
-</div>
+    </div>
+</body>
