--- a/WebApplication.Web/Views/MealPlan/Index.cshtml
+++ b/WebApplication.Web/Views/MealPlan/Index.cshtml
@@ -1,7 +1,44 @@
-﻿
+﻿@model IList<MealPlans>
 @{
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Meal Plans</h2>
+<style>
+</style>
 
+<body>
+    <div>
+        <div class="container-fluid">
+            <h2 align="center" style=" color: brown; ">Your Meal Plans</h2>
+            <div class="row">
+                <div class=" col-md-4 ">
+                    @{ foreach (MealPlans plan in Model)
+                        {
+                            <div class="inline-block" style="color: black; font-size: large; font-style: oblique;">
+
+
+                                <p> @plan.MealPlanName</p>
+                                <p>@plan.MealPlanImage</p>
+                                <p>@plan.RecipeCount Recipes Added</p>
+
+                            </div>
+
+                        }
+                    }
+                    <p>
+                        <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 20%">Add Recipe</a>
+
+                        <a href="/Account/Register" class="btn btn-warning" style="margin-left: 60%">Not Registered? Sign Up!</a>
+                    </p>
+
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+    </div>
+</body>
