--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -31,13 +31,12 @@
                 <div class="col-xs-12">
                     @{ foreach (Recipes recipe in Model)
                         {
-                            <div class ="inline-block"style="color: darkred; font-size: large; font-style: oblique;">
+                            <div class ="inline-block"style="color: black; font-size: large; font-style: oblique;">
 
 
-                                <p> @recipe.RecipeName</p>
+                                <p>@recipe.RecipeName</p>
                                 <p>@recipe.RecipeDescription</p>
                                 <p>@recipe.CaloriesPerServing Calories Per Serving</p>
-                             
                             </div>
 
                         }
