--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -16,44 +16,50 @@
 <style>
 
     body {
+        height: 100%;
+        width: 100%;
         background-image: url("https://i1.wp.com/static1.squarespace.com/static/56c3a2c11bbee05e5e959908/t/59e7f139d74cff9265e5754b/1508372817664/cuttingboard.jpg");
-        background-size:100%;
+        background-size: 100%;
+        background-attachment: fixed;
     }
-
 </style>
 
 <body>
     <div class="topRecipes">
-        <h2 align ="center" style=" color: antiquewhite; "> Welcome to the Capstone Meal Planner</h2>
-
+        <h2 align="center" style=" color: antiquewhite; "> Welcome to the Capstone Meal Planner</h2>
+        <br />
+        <br />
+        <br />
         <div class="container-fluid">
             <div class="row">
-                <div class="col-xs-12">
+                <div>
                     @{ foreach (Recipes recipe in Model)
                         {
-                            <div class ="inline-block"style="color: blanchedalmond; font-size: large; font-style: oblique;">
+                            <div class="col-md-4">
+                                <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
 
+                                <div class="inline-block" style="color: blanchedalmond; font-size: large; font-style: oblique;">
 
-                                <p>@recipe.RecipeName</p>
-                                <p>@recipe.RecipeDescription</p>
-                                <p>@recipe.CaloriesPerServing Calories Per Serving</p>
+                                    <p>@recipe.RecipeName</p>
+                                    <p>@recipe.CookTime minutes of cook time.</p>
+                                </div>
                             </div>
 
                         }
                     }
-                            <p>
-                                <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 20%">My Meal Plan</a>
-                                <a href="/Recipes/Index" class="btn btn-primary" style="margin-left: 40%">Our Recipes</a>
-                                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 60%">Sign Up!</a>
-                            </p>
-    
+
+
                 </div>
             </div>
         </div>
-      
+        <div>
+            <p id="buttonOnHomePage">
+                <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 10%">My Meal Plan</a>
+                <a href="/Recipes/Index" class="btn btn-primary" style="margin-left: 27%">Our Recipes</a>
+                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 29%">Sign Up!</a>
+            </p>
 
-
-
+        </div>
 
     </div>
 </body>
