--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -18,7 +18,7 @@
     body {
         height: 100%;
         width: 100%;
-        background-image: url("https://i1.wp.com/static1.squarespace.com/static/56c3a2c11bbee05e5e959908/t/59e7f139d74cff9265e5754b/1508372817664/cuttingboard.jpg");
+        background-image: url("http://www.grewarsfarmshop.co.uk/wp-content/uploads/2017/02/List-Of-Top-Cutting-Board-Background-Images.jpg");
         background-size: 100%;
         background-attachment: fixed;
     }
@@ -57,8 +57,8 @@
         <div>
             <p id="buttonOnHomePage">
                 <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 10%">My Meal Plan</a>
-                <a href="/Recipes/Index" class="btn btn-primary" style="margin-left: 27%">Our Recipes</a>
-                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 29%">Sign Up!</a>
+                <a href="/Recipes/Index" class="btn btn-primary" style="margin-left: 27%">All Recipes</a>
+                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 29%">Not Registered? Sign Up!</a>
             </p>
 
         </div>
