--- a/WebApplication.Web/Views/Recipes/Index.cshtml
+++ b/WebApplication.Web/Views/Recipes/Index.cshtml
@@ -3,13 +3,11 @@
     ViewData["Title"] = "Home Page";
 }
 
-
 <style>
-
     body {
         height: 100%;
         width: 100%;
-        background-image: url("https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/1656196/1360/906/m1/fpnw/wm1/ees6hqqmdfyfpd2mm0hkqwvhrffoozof6ptm7b4ncvatl3vzwwsercpqc3jnoa3c-.jpg?1473853235&s=740980438cd956b3c2024cff83dddf5d");
+        background-image: url("https://wallpapershome.com/images/pages/pic_h/403.jpg");
         background-size: 100%;
         background-attachment: fixed;
     }
@@ -30,18 +28,12 @@
                                 <a href="/Recipes/Detail">
                                     <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
                                 </a>
-
                                 <div class="inline-block" style="color: white; font-size: large; font-style: oblique;">
-
                                     <p>@recipe.RecipeName</p>
-                                    
                                 </div>
                             </div>
-
                         }
                     }
-
-
                 </div>
             </div>
         </div>
@@ -50,8 +42,6 @@
                 <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 20%">My Meal Plan</a>
                 <a href="/Account/Register" class="btn btn-warning" style="margin-left: 35%">Not Registered? Sign Up!</a>
             </p>
-
         </div>
-
     </div>
 </body>
