--- a/WebApplication.Web/Views/Recipes/Detail.cshtml
+++ b/WebApplication.Web/Views/Recipes/Detail.cshtml
@@ -15,7 +15,7 @@
 
 <body>
     <div class="topRecipes">
-        <h2 align="center" style="color: white;">Recipe Details</h2>
+        <h2 align="center" style="color: orange; font-size: xx-large">Recipe Details</h2>
         <br />
         <br />
         <br />
@@ -26,7 +26,7 @@
                         {
                             <div class="col-md-4">
                                 <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
-                                <div class="inline-block" style="color: white; font-size: large; font-style: oblique;">
+                                <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
                                     <p>@recipe.RecipeName</p>
                                 </div>
                             </div>
