--- a/WebApplication.Web/Views/Recipes/Index.cshtml
+++ b/WebApplication.Web/Views/Recipes/Index.cshtml
@@ -15,7 +15,7 @@
 
 <body>
     <div class="topRecipes">
-        <h2 align="center" style="color: white;">All Recipes</h2>
+        <h2 align="center" style="color: orange; font-size: xx-large">All Recipes</h2>
         <br />
         <br />
         <br />
@@ -28,7 +28,7 @@
                                 <a href="/Recipes/Detail">
                                     <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
                                 </a>
-                                <div class="inline-block" style="color: white; font-size: large; font-style: oblique;">
+                                <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
                                     <p>@recipe.RecipeName</p>
                                 </div>
                             </div>
