Fixed DAL stuff

--- a/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
+++ b/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
@@ -26,6 +26,6 @@
     </div>
 </form>
 <div>
-    <partial name="RecipesToAddToMealPlan.cshtml" model="Recipes" />
+    <partial name="RecipesToAddToMealPlan.cshtml" model="Model" />
 </div>
 
