Got the meal plan drop down working for the Party Parrotsgit add -A!

--- a/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
+++ b/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
@@ -21,12 +21,12 @@
             <label asp-for="activityLevel">Activity Level</label>
             <select class="Spacing4" asp-for="activityLevel" asp-items="SurveyModel.Active"></select>
         </div>*@
-    @*<div>
-        <div class="Spacing0">
+    <div>
+        <div>
             <label asp-for="Recipe.RecipeName">Recipe to Add</label>
-            <select class="Spacing1" asp-for="Recipe.RecipeName" asp-items="Model.Recipe.RecipeDropDown"></select>
+            <select asp-for="Recipe.RecipeName" asp-items="Model.Recipe.RecipeDropDown"></select>
         </div>
-    </div>*@
+    </div>
     <div id="button">
         <input type="submit" value="Submit" />
     </div>
