changed some things in the controller and view for recipe

--- a/WebApplication.Web/Views/MealPlan/RecipeToAddToMealPlan.cshtml
+++ b/WebApplication.Web/Views/MealPlan/RecipeToAddToMealPlan.cshtml
@@ -2,7 +2,7 @@
 @*
     For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
 *@
-<form asp-controller="MealPlan" asp-action="RecipesToAddToMealPlan" method="get">
+<form asp-controller="MealPlan" asp-action="RecipeToAddToMealPlan" method="get">
     <div>
         <div class="Spacing0">
             <label asp-for="Recipe.RecipeName">Recipe to Add</label>
