--- a/WebApplication.Web/Views/Recipes/AddRecipe.cshtml
+++ b/WebApplication.Web/Views/Recipes/AddRecipe.cshtml
@@ -16,7 +16,7 @@
 
 <h2 align="center" style="color: orange; font-size: xx-large">Add Recipe</h2>
 
-<form asp-controller="AccountController" asp-action="AddRecipe" method="post">
+<form asp-controller="RecipeController" asp-action="AddRecipe" method="post">
     <div class="labels">
         <label asp-for="RecipeDescription">Recipe Description:</label>
     </div>
