changed controller name

--- a/WebApplication.Web/Views/MealPlan/Index.cshtml
+++ b/WebApplication.Web/Views/MealPlan/Index.cshtml
@@ -32,7 +32,7 @@
             </div>
         </div>
         <p id="buttonOnMealPlanPage">
-            <a href="/Recipes/Index" class="btn btn-success" style="margin-left: 20%">All Recipes</a>
+            <a href="/Recipe/Index" class="btn btn-success" style="margin-left: 20%">All Recipes</a>
             <a href="/Account/Register" class="btn btn-warning" style="margin-left: 35%">Not Registered? Sign Up!</a>
         </p>
     </div>
