--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -20,12 +20,13 @@
         background-image: url("https://wallpaper.wiki/wp-content/uploads/2017/04/wallpaper.wiki-HD-Pictures-Food-PIC-WPD006582.jpg");
         background-size: 100%;
         background-attachment: fixed;
+        $enable-shadows: true;
     }
 </style>
 
 <body>
     <div class="topRecipes">
-        <h2 align="center" style="color: orange; font-size: xx-large"> Welcome to the Capstone Meal Planner</h2>
+        <h2 class = "shadow-lg" align="center" style="color: orange; font-size: xx-large"> Welcome to the Capstone Meal Planner</h2>
         <br />
         <br />
         <br />
