--- a/WebApplication.Web/Views/Account/UserProfile.cshtml
+++ b/WebApplication.Web/Views/Account/UserProfile.cshtml
@@ -1,8 +1,47 @@
-﻿
+﻿@model AwesomeModel
 @{
     ViewData["Title"] = "UserProfile";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>UserProfile</h2>
+@*<style>
+    body {
+        height: 100%;
+        width: 100%;
+        background-image: url("https://cdn.hipwallpaper.com/i/35/78/jhYV6A.jpg");
+        background-size: 100%;
+        background-attachment: fixed;
+    }
+</style>
+
+<body>
+    <div class="topRecipes">
+        <h2 align="center" style="color: orange; font-size: xx-large">User Profile</h2>
+        <br />
+        <br />
+        <br />
+        <div class="container-fluid">
+            <div class="row">
+                <div>
+                    @{ foreach (Users information in Model)
+                        {
+                            <div class="col-md-4">
+                                <img class="userIdPage" src="@" alt="User Image">
+                                <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
+                                    <p>@</p>
+                                </div>
+                            </div>
+                        }
+                    }
+                </div>
+            </div>
+        </div>
+        <div>
+            <p id="buttonOnAllRecipesPage">
+                <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 20%">My Meal Plan</a>
+                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 35%">Not Registered? Sign Up!</a>
+            </p>
+        </div>
+    </div>
+</body>*@
 
