Got Add Meal Plan Working, Database needed a new Joiner table so adam came over and coded it into MEalPlanner.SQL.

--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
                     @{ foreach (Recipes recipe in Model)
                         {
                             <div class="col-md-4">
-                                <a href="/Recipes/Detail">
+                                <a href="/Recipe/Detail">
                                     <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
                                 </a>
                                 <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
