--- a/WebApplication.Web/Views/Recipe/Detail.cshtml
+++ b/WebApplication.Web/Views/Recipe/Detail.cshtml
@@ -1,6 +1,8 @@
-﻿@model IList<Recipes>
+﻿@model Recipes
 @{
     ViewData["Title"] = "Detail";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+
 }
 
 <style>
@@ -15,25 +17,45 @@
 
 <body>
     <div class="topRecipes">
-        <h2 align="center" style="color: orange; font-size: xx-large">Recipe Details</h2>
+        <h2 align="center" style="color: ActiveBorder; font-size: xx-large">@Model.RecipeName Recipe Details</h2>
         <br />
         <br />
         <br />
         <div class="container-fluid">
             <div class="row">
+                <p style="color:ActiveBorder">Cook Time: @Model.CookTime Min Prep Time: @Model.PrepTime Min</p>
+                <img class="detailRecipeImage" src="@Model.RecipeImage" alt="Recipe Image">
+
+
                 <div>
-                    @{ foreach (Recipes recipe in Model)
-                        {
-                            <div class="col-md-4">
-                                <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
-                                <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
-                                    <p>@recipe.RecipeName</p>
-                                </div>
-                            </div>
-                        }
+                    @{ <table class="table table-striped table-dark">
+                            <thead>
+                                <tr>
+                                    <th scope="col" style="color:ActiveBorder">GlutenFree</th>
+                                    <th scope="col" style="color:ActiveBorder">Vegetarian Friendly</th>
+                                    <th scope="col" style="color:ActiveBorder">Vegan Friendly</th>
+                                    <th scope="col" style="color:ActiveBorder">Dairy Free</th>
+                                    <th scope="col" style="color:ActiveBorder">Nut Free</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>@Model.GlutenFree</td>
+                                    <td>@Model.VegetarianFriendly</td>
+                                    <td>@Model.VeganFriendly</td>
+                                    <td>@Model.DairyFree</td>
+                                    <td>@Model.NutFree</td>
+
+
+                                </tr>
+
+                            </tbody>
+                        </table>
                     }
                 </div>
+
             </div>
+            <p style="color: goldenrod; font-size: larger"> @Model.Instructions</p>
         </div>
         <div>
             <p id="buttonOnAllRecipesPage">
