--- a/WebApplication.Web/Views/Recipe/Detail.cshtml
+++ b/WebApplication.Web/Views/Recipe/Detail.cshtml
@@ -6,62 +6,67 @@
 }
 
 <style>
-    body {
+
+    div.background {
         height: 100%;
         width: 100%;
         background-image: url("https://cdn.hipwallpaper.com/i/35/78/jhYV6A.jpg");
         background-size: 100%;
         background-attachment: fixed;
+        
     }
+
 </style>
 
 <body>
-    <div class="topRecipes">
-        <h2 align="center" style="color: ActiveBorder; font-size: xx-large">@Model.RecipeName Recipe Details</h2>
-        <br />
-        <br />
-        <br />
-        <div class="container-fluid">
-            <div class="row">
-                <p style="color:ActiveBorder">Cook Time: @Model.CookTime Min Prep Time: @Model.PrepTime Min</p>
-                <img class="detailRecipeImage" src="@Model.RecipeImage" alt="Recipe Image">
+    <div class="background">
+        <div class="topRecipes" style="opacity: 1.0;">
+            <h2 align="center" style="color: ActiveBorder; font-size: xx-large">@Model.RecipeName Recipe Details</h2>
+            <br />
+            <br />
+            <br />
+            <div class="container-fluid">
+                <div class="row">
+                    <p style="color:ActiveBorder">Cook Time: @Model.CookTime Min Prep Time: @Model.PrepTime Min</p>
+                    <img class="detailRecipeImage" src="@Model.RecipeImage" alt="Recipe Image">
 
 
-                <div>
-                    @{ <table class="table table-striped table-dark">
-                            <thead>
-                                <tr>
-                                    <th scope="col" style="color:ActiveBorder">GlutenFree</th>
-                                    <th scope="col" style="color:ActiveBorder">Vegetarian Friendly</th>
-                                    <th scope="col" style="color:ActiveBorder">Vegan Friendly</th>
-                                    <th scope="col" style="color:ActiveBorder">Dairy Free</th>
-                                    <th scope="col" style="color:ActiveBorder">Nut Free</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td>@Model.GlutenFree</td>
-                                    <td>@Model.VegetarianFriendly</td>
-                                    <td>@Model.VeganFriendly</td>
-                                    <td>@Model.DairyFree</td>
-                                    <td>@Model.NutFree</td>
+                    <div>
+                        @{ <table class="table table-striped table-dark">
+                                <thead>
+                                    <tr>
+                                        <th scope="col" style="color:ActiveBorder">GlutenFree</th>
+                                        <th scope="col" style="color:ActiveBorder">Vegetarian Friendly</th>
+                                        <th scope="col" style="color:ActiveBorder">Vegan Friendly</th>
+                                        <th scope="col" style="color:ActiveBorder">Dairy Free</th>
+                                        <th scope="col" style="color:ActiveBorder">Nut Free</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>@Model.GlutenFree</td>
+                                        <td>@Model.VegetarianFriendly</td>
+                                        <td>@Model.VeganFriendly</td>
+                                        <td>@Model.DairyFree</td>
+                                        <td>@Model.NutFree</td>
 
 
-                                </tr>
+                                    </tr>
 
-                            </tbody>
-                        </table>
-                    }
+                                </tbody>
+                            </table>
+                        }
+                    </div>
+
                 </div>
-
+                <p style="color: goldenrod; font-size: larger"> @Model.Instructions</p>
             </div>
-            <p style="color: goldenrod; font-size: larger"> @Model.Instructions</p>
-        </div>
-        <div>
-            <p id="buttonOnAllRecipesPage">
-                <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 20%">My Meal Plan</a>
-                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 35%">Not Registered? Sign Up!</a>
-            </p>
+            <div>
+                <p id="buttonOnAllRecipesPage">
+                    <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 20%">My Meal Plan</a>
+                    <a href="/Account/Register" class="btn btn-warning" style="margin-left: 35%">Not Registered? Sign Up!</a>
+                </p>
+            </div>
         </div>
     </div>
 </body>
