--- a/WebApplication.Web/Views/Recipe/Detail.cshtml
+++ b/WebApplication.Web/Views/Recipe/Detail.cshtml
@@ -13,14 +13,19 @@
         background-image: url("https://cdn.hipwallpaper.com/i/35/78/jhYV6A.jpg");
         background-size: 100%;
         background-attachment: fixed;
-        
+        opacity: 0.5;
+    }
+
+    #topRecipes {
+        opacity: 1;
     }
 
 </style>
 
 <body>
     <div class="background">
-        <div class="topRecipes" style="opacity: 1.0;">
+        
+        <div id="topRecipes">
             <h2 align="center" style="color: ActiveBorder; font-size: xx-large">@Model.RecipeName Recipe Details</h2>
             <br />
             <br />
