created grocery list get and add

--- a/WebApplication.Web/Views/MealPlan/Index.cshtml
+++ b/WebApplication.Web/Views/MealPlan/Index.cshtml
@@ -32,8 +32,8 @@
             </div>
         </div>
         <p id="buttonOnMealPlanPage">
-            <a href="/Recipe/Index" class="btn btn-success" style="margin-left: 20%">All Recipes</a>
-            <a href="/Account/Register" class="btn btn-warning" style="margin-left: 35%">Not Registered? Sign Up!</a>
+            <a href="/Recipe/Index" class="btn btn-primary" style="margin-left: 10%">All Recipes</a>
+            <a href="/Account/Register" class="btn btn-warning" style="margin-left: 10%">Not Registered? Sign Up!</a>
         </p>
     </div>
 </body>
