--- a/WebApplication.Web/Views/GroceryList/Index.cshtml
+++ b/WebApplication.Web/Views/GroceryList/Index.cshtml
@@ -1,30 +1,38 @@
-﻿
+﻿@model IList<GroceryLists>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
-@*<h2 align="center" style="color: orange; font-size: xx-large">Grocery List</h2>
+<h2 align="center" style="color: orange; font-size: xx-large">Grocery List</h2>
 
-    <body>
-        <div class="container-fluid">
-            <div class="row">
-                <div>
-                    @{ foreach (GroceryLists ingredient in Model)
-                        {
-                            <div class="col-md-4">
-                                <a href="/Recipe/Detail">
-                                    <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
-                                </a>
-                                <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
-                                    <p>@recipe.RecipeName</p>
-                                    <p>@recipe.CookTime minutes of cook time.</p>
-                                </div>
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div>
+                @{ foreach (GroceryLists groceryLists in Model)
+                    {
+                        <div class="col-md-4">
+
+                            <img class="recipeImage" src="@groceryLists.GroceryListImage" alt="Recipe Image">
+
+                            <div class="inline-block" style="color: orange; font-size: x-large; font-style: oblique;">
+                                <p>@groceryLists.Item</p>
+                                <p>@groceryLists.Quantity</p>
                             </div>
-                        }
+                        </div>
                     }
-                </div>
+                }
             </div>
         </div>
-    </body>*@
+    </div>
+    <div>
+        <p id="buttonOnGroceryListPage">
+            <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 10%">My Meal Plan</a>
+            <a href="/Recipe/Index" class="btn btn-primary" style="margin-left: 10%">All Recipes</a>
+            <a href="/GroceryList/AddGroceryList" class="btn btn-danger" style="margin-left: 10%">Add Grocery List</a>
+            <a href="/Account/Register" class="btn btn-warning" style="margin-left: 10%">Not Registered? Sign Up!</a>
+        </p>
+    </div>
+</body>
