--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -52,8 +52,9 @@
         <div>
             <p id="buttonOnHomePage">
                 <a href="/MealPlan/Index" class="btn btn-success" style="margin-left: 10%">My Meal Plan</a>
-                <a href="/Recipe/Index" class="btn btn-primary" style="margin-left: 27%">All Recipes</a>
-                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 29%">Not Registered? Sign Up!</a>
+                <a href="/Recipe/Index" class="btn btn-primary" style="margin-left: 10%">All Recipes</a>
+                <a href="/GroceryList/Index" class="btn btn-danger" style="margin-left: 10%">Grocery List</a>
+                <a href="/Account/Register" class="btn btn-warning" style="margin-left: 10%">Not Registered? Sign Up!</a>
             </p>
         </div>
     </div>
