--- a/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
+++ b/WebApplication.Web/Views/MealPlan/AddMealPlan.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "AddMealPlan";
 }
 
-<h2>AddMealPlan</h2>
+<h2>New Meal Plan</h2>
 
 
 <form asp-controller="MealPlan" asp-action="AddMealPlan" method="post">
