--- a/WebApplication.Web/Views/Recipe/AddRecipe.cshtml
+++ b/WebApplication.Web/Views/Recipe/AddRecipe.cshtml
@@ -14,7 +14,7 @@
     }
 </style>
 
-<h2 align="center" style="color: orange; font-size: xx-large">Add Recipe</h2>
+<h2 align="center" style="color: orange; font-size: xx-large">New Recipe</h2>
 
 <form asp-controller="Recipe" asp-action="AddRecipe" method="post">
     <div class="labels">
