--- a/WebApplication.Web/Views/Shared/Components/NavBar/_NavBar.cshtml
+++ b/WebApplication.Web/Views/Shared/Components/NavBar/_NavBar.cshtml
@@ -7,8 +7,8 @@
 
 @if (Model == null)
 {
-    <li><a asp-area="" asp-controller="Account" asp-action="Register">Register</a></li>
-    <li><a asp-area="" asp-controller="Account" asp-action="Login">Login</a></li>
+    <li><a asp-area="" asp-controller="Account" asp-action="Register" style="color:darkslategray">Register</a></li>
+    <li><a asp-area="" asp-controller="Account" asp-action="Login" style="color:darkcyan">Login</a></li>
 }
 else
 {
