--- a/WebApplication.Web/Views/Account/Login.cshtml
+++ b/WebApplication.Web/Views/Account/Login.cshtml
@@ -4,19 +4,29 @@
 @{
     ViewData["Title"] = "Login";
 }
+<style>
+    body {
+        height: 100%;
+        width: 100%;
+        background-image: url("https://cdn.hipwallpaper.com/i/35/78/jhYV6A.jpg");
+        background-size: 100%;
+        background-attachment: fixed;
+    }
+</style>
+<body>
+    <h2 style="font-weight:bolder; color:black;">Sign In</h2>
 
-<h2>Login</h2>
-
-<form asp-controller="account" asp-action="login" method="post">
-    <div class="form-group">
-        <label asp-for="Email"></label>
-        <input asp-for="Email" placeholder="Email" />    
-        <span asp-validation-for="Email"></span>
-    </div>
-    <div class="form-group">
-        <label asp-for="Password"></label>
-        <input type="password" asp-for="Password" />        
-        <span asp-validation-for="Password"></span>
-    </div>        
-    <button type="submit" class="btn btn-default">Submit</button>
-</form>
+    <form asp-controller="account" asp-action="login" method="post">
+        <div class="form-group" style=" color:black; font-weight:bolder;">
+            <label asp-for="Email"></label>
+            <input asp-for="Email" placeholder="Email" />
+            <span asp-validation-for="Email"></span>
+        </div>
+        <div class="form-group" style=" color:black; font-weight:bold;">
+            <label asp-for="Password"></label>
+            <input type="password" asp-for="Password" />
+            <span asp-validation-for="Password"></span>
+        </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+</body>
