--- a/WebApplication.Web/Views/Shared/_Layout.cshtml
+++ b/WebApplication.Web/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" style="background-color: lightcyan; opacity: 0.7;">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,13 +29,13 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">WebApplication.Web</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index" style="color:black">Home Page</a></li>
+                    <li><a asp-area="" asp-controller="Recipe" asp-action="Index" style="color:darkslategray">Our Recipes</a></li>
+                    <li><a asp-area="" asp-controller="MealPlan" asp-action="AddMealPlan" style="color:darkslategray">MealPlans</a></li>
+
                 </ul>
                 
                 <ul class="nav navbar-nav navbar-right">
@@ -49,7 +49,7 @@
 
     <div class="container body-content">
         @RenderBody()
-        <hr />
+        <br />
         <footer>
             <p>&copy; 2018 - WebApplication.Web</p>
         </footer>
