--- a/WebApplication.Web/Views/Home/Index.cshtml
+++ b/WebApplication.Web/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 }
 <style>
     .shadow {
-        text-shadow: -1px 1px 2px #000, 1px 1px 2px #000, 1px -1px 0 #000, -1px -1px 0 #000;
+        text-shadow: -1px 1px 2px #ff6a00, 1px 1px 2px #000, 1px -1px 0 #000, -1px -1px 0 #000;
     }
 
     body {
