--- a/WebApplication.Web/Views/Shared/_Layout.cshtml
+++ b/WebApplication.Web/Views/Shared/_Layout.cshtml
@@ -35,6 +35,8 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="Index" style="color:black">Home Page</a></li>
                     <li><a asp-area="" asp-controller="Recipe" asp-action="Index" style="color:darkslategray">Our Recipes</a></li>
                     <li><a asp-area="" asp-controller="MealPlan" asp-action="AddMealPlan" style="color:darkslategray">MealPlans</a></li>
+                    <li><a asp-area="" asp-controller="GroceryList" asp-action="Index" style="color:darkslategray">Grocery List</a></li>
+
 
                 </ul>
                 
