--- a/WebApplication.Web/Views/Recipe/Index.cshtml
+++ b/WebApplication.Web/Views/Recipe/Index.cshtml
@@ -24,12 +24,13 @@
                 <div>
                     @{ foreach (Recipes recipe in Model)
                         {
-                            <div class="col-md-4">
-                                <a asp-controller="Recipe" asp-action="Detail" asp-route-RecipeId="@recipe.RecipeId">
+                            <div class="col-md-3">
+                                @*<a asp-controller="Recipe" asp-action="Detail" asp-route-RecipeId="@recipe.RecipeId">
                                     <p class="inline-block" style="color: orange; font-size: x-large; font-style: oblique">@recipe.RecipeName - Details</p>
 
-                                </a>
-                                <a href="/Recipe/Detail?RecipeName=@recipe.RecipeName">
+                                </a>*@
+                                <p style="color:white; font-size: 28px;"> @recipe.RecipeName</p>
+                                <a href="/Recipe/Detail?RecipeId=@recipe.RecipeId">
                                     <img class="recipeImage" src="@recipe.RecipeImage" alt="Recipe Image">
                                 </a>
                             </div>
